// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SelectDirective form integration should render defaults correctly 1`] = `
<div>
  <select
    class="v-input"
    ngmodel=""
    v-select=""
  />
</div>
`;

exports[`SelectDirective should render defaults correctly 1`] = `
<div>
  <select
    class="v-input"
    v-select=""
  />
</div>
`;
